Update 'njbeh4yzx-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:d842b6a3969d8c05cc344650c6488c1891d618d1@sha256:ac8be785ea28ad3ae397ca1ed5e76f5ced81665e8cda6d4130b8b7ce15c77e63

--- a/components/njbeh4yzx-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/njbeh4yzx-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: njbeh4yzx-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:d842b6a3969d8c05cc344650c6488c1891d618d1@sha256:ac8be785ea28ad3ae397ca1ed5e76f5ced81665e8cda6d4130b8b7ce15c77e63
+          name: container-image
